--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 
 add_subdirectory( "lib-src" )
-add_subdirectory( "src" )
+#add_subdirectory( "src" )
 
 # Uncomment what follows for symbol values.
 #[[
