Add remaining libs to CMake
These now all appear in the MSVC project.
Currently only FileDialog, Nyquist, mod-script-pipe compile and link, and Audacity compiles.
Still to set include directories and flags for most of the libs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 
 add_subdirectory( "lib-src" )
-#add_subdirectory( "src" )
+add_subdirectory( "cmake-proxies" )
+add_subdirectory( "src" )
 
 # Uncomment what follows for symbol values.
 #[[
