--- a/cmake-proxies/CMakeLists.txt
+++ b/cmake-proxies/CMakeLists.txt
@@ -2,8 +2,6 @@
 set( LIB_SRC_DIRECTORY ${top_dir}/lib-src/ )
 
 #These are done in their actual directories, no need for a proxy.
-#add_subdirectory( "mod-script-pipe" )
-#add_subdirectory( "FileDialog" )
 
 #Same idea, but not yet done/needed
 #add_subdirectory( "mod-null" )
@@ -16,6 +14,8 @@ set( LIB_SRC_DIRECTORY ${top_dir}/lib-src/ )
 
 
 add_subdirectory( "expat" )
+add_subdirectory( "FileDialog" )
+#add_subdirectory( "help" )
 add_subdirectory( "libflac" )
 add_subdirectory( "libflac++" )
 add_subdirectory( "libid3tag" )
@@ -26,11 +26,15 @@ add_subdirectory( "libscorealign" )
 add_subdirectory( "libsndfile" )
 add_subdirectory( "libsoxr" )
 add_subdirectory( "libvamp" )
+add_subdirectory( "libvorbis" )
+#add_subdirectory( "locale" )
 add_subdirectory( "lv2" )
+add_subdirectory( "mod-script-pipe" )
 add_subdirectory( "portaudio-v19" )
 add_subdirectory( "portmidi" )
 add_subdirectory( "portmixer" )
-add_subdirectory( "portburn" )
+#add_subdirectory( "portburn" ) # not built
 add_subdirectory( "portsmf" )
 add_subdirectory( "sbsms" )
+add_subdirectory( "soundtouch" )
 add_subdirectory( "twolame" )
