--- a/cmake-proxies/FileDialog/CMakeLists.txt
+++ b/cmake-proxies/FileDialog/CMakeLists.txt
@@ -1,5 +1,7 @@
 #directory lib-src/FileDialog
-
+set( TARGET FileDialog )
+set( TARGET_SOURCE ${LIB_SRC_DIRECTORY}${TARGET} )
+project( ${TARGET} )
 
 set( SOURCES 
 ${LIB_SRC_DIRECTORY}FileDialog/FileDialog.cpp
@@ -7,17 +9,16 @@ ${LIB_SRC_DIRECTORY}FileDialog/FileDialog.cpp
 ${LIB_SRC_DIRECTORY}FileDialog/win/FileDialogPrivate.cpp
 )
 
-
-project (FileDialog)
 add_library( FileDialog STATIC ${SOURCES})
 find_package(wxWidgets REQUIRED COMPONENTS net core base)
 include( ${wxWidgets_USE_FILE} )
-target_include_directories( FileDialog PRIVATE
+target_include_directories(  ${TARGET} PRIVATE 
 #${wxWidgets_INCLUDE_DIRS}
-${top_dir}/FileDialog
-${top_dir}/FileDialog/win
+${TARGET_SOURCE}
+${TARGET_SOURCE}/win
 )
 add_definitions( -DWXUSINGDLL -DWIN32 -D_LIB 
 #${wxWidgets_DEFINITIONS} 
 )
-target_link_libraries(FileDialog ${wxWidgets_LIBRARIES})
+target_link_libraries(${TARGET} ${wxWidgets_LIBRARIES})
+
