--- a/cmake-proxies/libogg/CMakeLists.txt
+++ b/cmake-proxies/libogg/CMakeLists.txt
@@ -9,11 +9,13 @@ ${LIB_SRC_DIRECTORY}libogg/src/bitwise.c
 ${LIB_SRC_DIRECTORY}libogg/src/framing.c
 )
 # This defines the #define on both Windows and Linux.
-add_definitions(  )
-add_library( ${TARGET} MODULE ${SOURCES})
+add_definitions( 
+-D_LIB
+)
+add_library( ${TARGET} STATIC ${SOURCES})
 
 target_include_directories( ${TARGET} PRIVATE 
-
+${TARGET_SOURCE}/include
 )
 
 target_link_libraries( ${TARGET} )
