--- a/cmake-proxies/twolame/CMakeLists.txt
+++ b/cmake-proxies/twolame/CMakeLists.txt
@@ -5,9 +5,9 @@ set( TARGET_SOURCE ${LIB_SRC_DIRECTORY}${TARGET} )
 project( ${TARGET} )
 
 set( SOURCES 
-${LIB_SRC_DIRECTORY}twolame/frontend/audioin_raw.c
-${LIB_SRC_DIRECTORY}twolame/frontend/audioin_sndfile.c
-${LIB_SRC_DIRECTORY}twolame/frontend/frontend.c
+#${LIB_SRC_DIRECTORY}twolame/frontend/audioin_raw.c
+#${LIB_SRC_DIRECTORY}twolame/frontend/audioin_sndfile.c
+#${LIB_SRC_DIRECTORY}twolame/frontend/frontend.c
 ${LIB_SRC_DIRECTORY}twolame/libtwolame/ath.c
 ${LIB_SRC_DIRECTORY}twolame/libtwolame/availbits.c
 ${LIB_SRC_DIRECTORY}twolame/libtwolame/bitbuffer.c
@@ -27,12 +27,15 @@ ${LIB_SRC_DIRECTORY}twolame/libtwolame/psycho_n1.c
 ${LIB_SRC_DIRECTORY}twolame/libtwolame/subband.c
 ${LIB_SRC_DIRECTORY}twolame/libtwolame/twolame.c
 ${LIB_SRC_DIRECTORY}twolame/libtwolame/util.c
-${LIB_SRC_DIRECTORY}twolame/simplefrontend/audio_wave.c
-${LIB_SRC_DIRECTORY}twolame/simplefrontend/simplefrontend.c
+#${LIB_SRC_DIRECTORY}twolame/simplefrontend/audio_wave.c
+#${LIB_SRC_DIRECTORY}twolame/simplefrontend/simplefrontend.c
 )
 # This defines the #define on both Windows and Linux.
-add_definitions(  )
-add_library( ${TARGET} MODULE ${SOURCES})
+add_definitions( 
+-D_LIB
+-DLIBTWOLAME_STATIC
+ )
+add_library( ${TARGET} STATIC ${SOURCES})
 
 target_include_directories( ${TARGET} PRIVATE 
 
