Prepare for compiling with wxWidgets 3.1.1
- Upped version number to Audacity 2.3.0 in configure.ac
- configure.ac now wants 3.1.1 but still accepts 3.0.0 (for top level, lib-widgets-extra and mod-nyq-bench)
- .travis.yml now apt-gets autopoint.  This allows us to do an autoreconf -ivf on Travis, IF we want to, but i snot used yet.
- FileDialog MakeFile.am now has LDFLAGS to resolve libtools issue on Travis with missing --tags=CXX

--- a/lib-src/FileDialog/Makefile.am
+++ b/lib-src/FileDialog/Makefile.am
@@ -2,6 +2,7 @@ ACLOCAL_AMFLAGS = -I m4
 
 lib_LTLIBRARIES = libFileDialog.la
 
+libFileDialog_la_LIBTOOLFLAGS = --tag=CXX
 libFileDialog_la_CPPFLAGS = $(WX_CXXFLAGS) -Wno-deprecated-declarations
 libFileDialog_la_LIBADD = $(WX_LIBS)
 libFileDialog_la_SOURCES = FileDialog.cpp FileDialog.h
