--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ addons:
             - gcc-4.9
 before_install:
     - sudo apt-get update -qq
-    - sudo apt-get install -y libwxgtk3.0-dev libgtk2.0-dev gettext libasound2-dev alsa-utils alsa-oss
+    - sudo apt-get install -y libwxgtk3.0-dev libgtk2.0-dev gettext autopoint libasound2-dev alsa-utils alsa-oss
     - git show -s --format="#define REV_LONG \"%H\"%n#define REV_TIME \"%cd\"%n" | tee ./src/RevisionIdent.h
     - export CXX="g++-4.9" CC="gcc-4.9"
     - FLAGS="-w -std=gnu++11"
@@ -17,4 +17,4 @@ before_install:
 language:
     - cpp
 script:
-    -  time ./configure && time make -j2
+    - time ./configure && time make -j2
