--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,14 @@
 #if you want to work on this, please talk with us on
 # https://lists.sourceforge.net/lists/listinfo/audacity-devel
 #build time is circa 50 mins.
-version: 2.2.2-alpha-{build}
+version: 2.3.0-alpha-{build}
+branches:
+  only:
+  - prefs
+  - stdint
+  - msc_ver
+  - post-vs2013
+  - master
 image: Visual Studio 2013
 shallow_clone: true # reduce traffic
 install:
@@ -15,12 +22,9 @@ install:
     # the moment due to long duration
     - nuget install Gettext.Tools -Version 0.19.8.1 -OutputDirectory %AUDACITY_ROOT%\win\packages
     # download wxWidgets
-    - git clone --branch v3.0.2 --depth 1 https://github.com/wxWidgets/wxWidgets.git %WXWIN%
-    # apply audacity patches
-    - xcopy %AUDACITY_ROOT%\win\wxWidgets_additions\wxWidgets-3.0.2 %WXWIN% /s /y /f
-    - xcopy %WXWIN%\include\wx\setup_redirect.h %WXWIN%\include\wx\setup.h* /f
+    - git clone --branch audacity-fixes --depth 1 https://github.com/audacity/wxWidgets.git %WXWIN%
     # build wxWidgets
-    - msbuild /m %WXWIN%\build\msw\wx_vc12.sln "/p:Configuration=DLL Release;PlatformToolset=v120" /target:adv,base,core,html,net,qa,wxexpat,wxjpeg,wxpng,wxtiff,wxzlib,xml /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+    - msbuild /m %WXWIN%\build\msw\wx_vc12.sln "/p:Configuration=DLL Release;PlatformToolset=v120;WholeProgramOptimization=true" /target:adv,base,core,html,net,qa,wxexpat,wxjpeg,wxpng,wxtiff,wxzlib,xml /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 environment:
     WXWIN: '%APPVEYOR_BUILD_FOLDER%\..\wxWidgets'
     AUDACITY_ROOT: '%APPVEYOR_BUILD_FOLDER%'
@@ -30,10 +34,9 @@ environment:
     #project: win/audacity.sln
 #configuration:
     #- Release
-build_script: # build all targets except `help`
+build_script: # build all targets except of `help`
 - cmd: >-
-    set PATH=%PATH%;%AUDACITY_ROOT%\win\packages\Gettext.Tools.0.19.8.1\tools\bin &&
-    msbuild /m win/audacity.sln /p:Configuration=Release;PlatformToolset=v120 /target:expat,filedialog,libflac++,libflac,libid3tag,libmad,libnyquist,libogg,libscorealign,libsndfile,libsoxr,libvamp,libvorbis,lv2,portaudio-v19,portmidi,portmixer,portsmf,sbsms,soundtouch,twolame,Audacity /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" &&
+    msbuild /m win/audacity.sln /p:Configuration=Release;PlatformToolset=v120;WholeProgramOptimization=true /target:expat,filedialog,libflac++,libflac,libid3tag,libmad,libnyquist,libogg,libscorealign,libsndfile,libsoxr,libvamp,libvorbis,lv2,portaudio-v19,portmidi,portmixer,portsmf,sbsms,soundtouch,twolame,Audacity /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" &&
     del /S win\Release\*.ipdb &&
     del /S win\Release\*.iobj &&
     del /S win\Release\*.lib &&
