--- a/lib-src/mod-script-pipe/configure.ac
+++ b/lib-src/mod-script-pipe/configure.ac
@@ -1,9 +1,9 @@
 #
-# mod-nyq-bench
+# mod-script-pipe
 #
 
 AC_PREREQ([2.59])
-AC_INIT([mod-nyq-bench],[1.0],[feedback@audacityteam.org],[mod-nyq-bench])
+AC_INIT([mod-script-pipe],[1.0],[feedback@audacityteam.org],[mod-script-pipe])
 AC_CONFIG_AUX_DIR([autotools])
 AC_CONFIG_MACRO_DIR([m4])
 AX_CXX_COMPILE_STDCXX(11)
